# Amethyst-iOS-MyRemastered

./: IFLOW.md  Makefile  README.md  README_CN.md  question.txt
.figma/1253_442/: index.jsx  index.module.scss
.figma/1270_3670/: index.jsx  index.module.scss
.figma/802_3/: index.jsx  index.module.scss
.github/: FUNDING.yml
Natives/: AccountListViewController.m  AppDelegate.m  BackgroundManager.h  BackgroundManager.m  BackgroundSettingsViewController.h  BackgroundSettingsViewController.m  CMakeLists.txt  DownloadProgressViewController.m  DownloadViewController.h  DownloadViewController.m  Info.plist  JavaLauncher.m  LauncherMenuViewController.h  LauncherMenuViewController.m  LauncherNavigationController.h  LauncherNavigationController.m  LauncherNewsViewController.m  LauncherPrefGameDirViewController.m  LauncherPrefManageJREViewController.m  LauncherPreferences.h  LauncherPreferences.m  LauncherPreferencesViewController.m  LauncherProfileEditorViewController.m  LauncherProfilesViewController.m  LauncherRightPanelViewController.h  LauncherRightPanelViewController.m  LauncherRootViewController.h  LauncherRootViewController.m  LauncherSplitViewController.m  MinecraftResourceDownloadTask.h  MinecraftResourceDownloadTask.m  ModTableViewCell.h  ModTableViewCell.m  ModVersionTableViewCell.h  ModVersionTableViewCell.m  ModVersionViewController.m  ModpackImportService.h  ModpackImportService.m  ModpackImportViewController.h  ModpackImportViewController.m  (+34 more)
Natives/authenticator/: BaseAuthenticator.m
Natives/input/: ControllerInput.m  GyroInput.m
Natives/installer/: FabricInstallViewController.h  FabricInstallViewController.m  ForgeInstallViewController.h  ForgeInstallViewController.m
Natives/installer/modpack/: ModrinthAPI.h  ModrinthAPI.m
Natives/theme/: ThemeManager.h  ThemeManager.m  default_theme.json
